--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,37 @@
-# MySQL Driver
+# Automatic Restart ?? ??
+spring.devtools.restart.enabled = true
+spring.devtools.livereload.enabled = true
+
+# ??? ???? ?
+kimdev.key=kd1234
+
+
+server.port=8000
+server.servlet.context-path=/
+server.servlet.encoding.charset=UTF-8
+server.servlet.encoding.enabled=true
+server.servlet.encoding.force=true
+
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-# DB Source URL
 spring.datasource.url=jdbc:mysql://localhost:3307/blog?serverTimezone=Asia/Seoul
-
-# DB username & password
 spring.datasource.username=kimdev
 spring.datasource.password=root
 
-# jpa setting
-#spring.jpa.hibernate.ddl-auto=create
-#spring.jpa.generate-ddl=false
-#spring.jpa.show-sql=true
-#spring.jpa.defer-datasource-initialization=true
-#spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults= false
+# return ? ???? ???? ???
+# ?????? .jsp ??? ???? ??? ??? .jsp ??? ??? ?? ??!
+spring.mvc.view.prefix=/WEB-INF/views/
+spring.mvc.view.suffix=.jsp
+
+spring.jpa.open-in-view=true
+# ??? ??? ?? ???? ?????? ? -> ???? create? ?? ???? update? ?? ?.
+spring.jpa.hibernate.ddl-auto=update
+# ???? ?? ?, ???? ???? ??? ??? ????
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+# id ?? ??? JPA ?? ??? ?? ????
+spring.jpa.hibernate.use-new-id-generator-mappings=false
+# JPA? ??? SQL?? ??? ????
+spring.jpa.show-sql=true
+# ?? ?, ??? ???? ???? ??.
+spring.jpa.properties.hibernate.format_sql=true
+
+spring.jackson.serialization.fail-on-empty-beans=false
